fix: don't set deprecated JVM flag '--illegal-access=deny'
This flag is no longer supported in JVM 17 which we have been using for
a while now. Reduces logging noise during startup.